# squelch

./: .gitignore  Cargo.toml  README.md
deploy/: DEPLOY.md  squelchd.service  update.sh
docs/: UX-DIRECTIONS.md
scripts/: rules.sh
squelch-api/: Cargo.toml
squelch-api/src/: auth.rs  error.rs  gmail_write.rs  guard.rs  handlers.rs  lib.rs  state.rs
squelch-api/tests/: client_api.rs
squelch-core/: Cargo.toml
squelch-core/src/: config.rs  credentials.rs  error.rs  lib.rs  types.rs
squelch-core/src/auth/: mod.rs
squelch-core/src/embed/: fastembed_impl.rs  mod.rs
squelch-core/src/store/: mod.rs  schema.sql  sqlite.rs
squelch-core/src/sync/: html.rs  ingest.rs  mod.rs
squelch-core/src/triage/: deadline.rs  mod.rs  receipt.rs  rules.rs  seal.rs  shipment.rs  stage2.rs
squelch-desktop/: .gitignore  bun.lockb  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
squelch-desktop/src/: App.tsx  main.tsx
squelch-desktop/src-tauri/: Cargo.toml  tauri.conf.json
squelch-desktop/src-tauri/capabilities/: default.json
squelch-desktop/src-tauri/icons/: icon.icns
squelch-desktop/src-tauri/src/: lib.rs  main.rs
squelch-desktop/src/actions/: useActions.ts
squelch-desktop/src/api/: client.ts  errors.ts  index.ts  settings.ts  types.ts
squelch-desktop/src/components/: AuditView.tsx  AuthCodeModal.tsx  AuthRing.tsx  AuthView.tsx  Avatar.tsx  BandSection.tsx  BrowseView.tsx  ComposeReview.tsx  EmailFrame.tsx  NoiseLine.tsx  ProcessMode.tsx  RevealPanel.tsx  RuleEditor.tsx  RulesView.tsx  SealedSection.tsx  SearchView.tsx  ShortcutsOverlay.tsx  Sidebar.tsx  SitrepHeader.tsx  ThemeToggle.tsx  ThreadPane.tsx  UpdateRow.tsx  ruleEditorBus.ts
squelch-desktop/src/keys/: dispatchCore.test.ts  dispatchCore.ts  index.ts  useKeys.ts
squelch-desktop/src/lib/: authCode.test.ts  authCode.ts  authCopy.ts  avatar.ts  clipboard.ts  dispatch.ts  format.ts  newsletters.test.ts  newsletters.ts  opener.test.ts  opener.ts
squelch-desktop/src/state/: index.ts  store.ts  theme.ts  useAuthArrival.ts  useSitrep.ts
squelch-desktop/src/styles/: global.css  settings.css  sitrep-dash.css  sitrep.css
squelch-desktop/src/views/: ActionLayer.tsx  Connect.tsx  EmailsView.tsx  RoutedView.tsx  SettingsView.tsx  SideViews.tsx  SitrepView.tsx  UsageView.tsx
squelch-mcp/: Cargo.toml
squelch-mcp/src/: lib.rs  main.rs  server.rs
squelch-tui/: Cargo.toml
squelch-tui/src/: app.rs  input.rs  main.rs  ui.rs
squelchd/: Cargo.toml
