[workspace]
resolver = "3"
members = ["squelch-core", "squelch-mcp", "squelch-tui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
regex = "1"
async-trait = "0.1"
oauth2 = { version = "5", features = ["reqwest", "reqwest-blocking", "rustls-tls"], default-features = false }
keyring = "4"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tiny_http = "0.12"
webbrowser = "1"
url = "2"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.6", default-features = false, features = ["runtime-tokio"] }
mail-parser = "0.11"
futures = "0.3"
base64 = "0.22"
