[workspace]
resolver = "3"
members = ["squelch-core", "squelch-mcp", "squelch-tui", "squelch-api", "squelchd"]
exclude = ["squelch-desktop/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

# Release builds target the headless Linux (Hetzner) box: thin LTO trims size
# and speeds hot paths without the full-LTO link-time blowup, and stripping
# symbols shrinks the shipped binary. Dev/test builds are unaffected.
[profile.release]
lto = "thin"
strip = "symbols"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
regex = "1"
async-trait = "0.1"
oauth2 = { version = "5", features = ["reqwest", "reqwest-blocking", "rustls-tls"], default-features = false }
keyring = "4"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tiny_http = "0.12"
webbrowser = "1"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
mail-parser = "0.11"
futures = "0.3"
base64 = "0.22"
# Local on-box semantic recall (v1). fastembed runs ONNX embeddings on CPU with
# no network at inference time (weights download once to a cache under the data
# dir); sqlite-vec statically links the vec0 virtual-table extension; zerocopy
# passes Vec<f32> to sqlite as raw bytes without copying.
# Force the whole fastembed download path onto rustls: the default features pull
# native-tls for BOTH the model downloader (hf-hub) and the ONNX-runtime binary
# downloader (ort), which drags in openssl-sys — fine on macOS (Secure Transport),
# but a hard build failure on the headless Linux box (no libssl-dev). rustls keeps
# the tree pure-Rust everywhere. `image-models` is dropped: we only do text embeddings.
fastembed = { version = "5", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
sqlite-vec = "0.1.9"
zerocopy = "0.7"
