[package]
name = "squelch-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
oauth2 = { workspace = true }
keyring = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
tiny_http = { workspace = true }
webbrowser = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
mail-parser = { workspace = true }
base64 = { workspace = true }
ammonia = "4"
fastembed = { workspace = true }
sqlite-vec = { workspace = true }
zerocopy = { workspace = true }
