[package]
name = "squelch-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
squelch-core = { path = "../squelch-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
# server + macros come from default features; transport-io adds stdio.
# SSE/streamable-http can be enabled later without touching tool logic.
rmcp = { version = "2.1.0", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"
