[package]
name = "squelch-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
squelch-core = { path = "../squelch-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
# server + macros come from default features; transport-io adds stdio.
# transport-streamable-http-server adds the (tower-based) Streamable HTTP transport,
# selected only in main(); tool logic stays transport-agnostic.
rmcp = { version = "2.1.0", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
    "schemars",
] }
schemars = "1"
# HTTP listener for the Streamable HTTP transport. rmcp gives us a tower Service;
# axum hosts it and provides graceful shutdown. Versions track rmcp 2.1.0.
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tokio-util = "0.7"
