[package]
name = "squelchd"
version.workspace = true
edition.workspace = true
license.workspace = true

# Top-level daemon/CLI. It sits ABOVE the libraries so it can host BOTH doors in
# one process: it depends on squelch-core (sync/auth/store/config),
# squelch-mcp (agent door / MCP HTTP service), and squelch-api (human door
# router). Those crates must NOT depend on squelchd (no cycle).
[[bin]]
name = "squelchd"
path = "src/bin/squelchd.rs"

[dependencies]
squelch-core = { path = "../squelch-core" }
squelch-mcp = { path = "../squelch-mcp" }
squelch-api = { path = "../squelch-api" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
axum = { version = "0.8" }
tokio-util = "0.7"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
